--- a/src/index.html
+++ b/src/index.html
@@ -15,41 +15,43 @@
   </head>
 
   <body>
-    <h1>Hosting plans</h1>
+    <h1 class="page-title">Hosting Plans</h1>
     <div class="container">
       <div class="pricing-plans">
-        <div class="plan">
-          <h2 class="plan__title">Free</h2>
-          <ul class="plan__features">
-            <li class="plan__feature">1 domain</li>
-            <li class="plan__feature">5GB of bandwith</li>
-            <li class="plan__feature">1GB of diskspace</li>
-            <li class="plan__feature">5,000 monthly uniques</li>
+        <div class="tier">
+          <h2 class="tier__title">Free</h2>
+          <ul class="tier__feature-list">
+            <li class="tier__list-item">1 domain</li>
+            <li class="tier__list-item">5gb of bandwidth</li>
+            <li class="tier__list-item">1gb of diskspace</li>
+            <li class="tier__list-item">5,000 monthly uniques</li>
           </ul>
-          <p class="plan__price">$0<span>/mo</span></p>
-          <button class="btn">Get started</button>
+          <p class="tier__price">$0<span>/month</span></p>
+          <button class="button">Get started</button>
         </div>
-        <div class="plan active">
-          <h2 class="plan__title">Tiny</h2>
-          <ul class="plan__features">
-            <li class="plan__feature">5 domain</li>
-            <li class="plan__feature">250GB of bandwith</li>
-            <li class="plan__feature">5GB of diskspace</li>
-            <li class="plan__feature">15,000 monthly uniques</li>
+
+        <div class="tier">
+          <h2 class="tier__title">Tiny</h2>
+          <ul class="tier__feature-list">
+            <li class="tier__list-item">5 domain</li>
+            <li class="tier__list-item">250gb of bandwidth</li>
+            <li class="tier__list-item">5gb of diskspace</li>
+            <li class="tier__list-item">15,000 monthly uniques</li>
           </ul>
-          <p class="plan__price">$19<span>/mo</span></p>
-          <button class="btn">Get started</button>
+          <p class="tier__price">$19<span>/month</span></p>
+          <button class="button">Get started</button>
         </div>
-        <div class="plan">
-          <h2 class="plan__title">Large</h2>
-          <ul class="plan__features">
-            <li class="plan__feature">15 domain</li>
-            <li class="plan__feature">750GB of bandwith</li>
-            <li class="plan__feature">20GB of diskspace</li>
-            <li class="plan__feature">50,000 monthly uniques</li>
+
+        <div class="tier">
+          <h2 class="tier__title">Large</h2>
+          <ul class="tier__feature-list">
+            <li class="tier__list-item">15 domain</li>
+            <li class="tier__list-item">750gb of bandwidth</li>
+            <li class="tier__list-item">20gb of diskspace</li>
+            <li class="tier__list-item">50,000 monthly uniques</li>
           </ul>
-          <p class="plan__price">$49<span>/mo</span></p>
-          <button class="btn">Get started</button>
+          <p class="tier__price">$49<span>/month</span></p>
+          <button class="button">Get started</button>
         </div>
       </div>
     </div>
